# MIRAGE

./: .gitignore  LICENSE  PROTOCOL_MIGRATION_TODO.md  README.md  build.bat  client.example.json  config.example.json  go.mod  go.sum  install.sh
MirageClient.WPF/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MirageClient.WPF.csproj
MirageClient.WPF/Models/: CoreModels.cs
MirageClient.WPF/Services/: CoreApiClient.cs  CoreHostService.cs  LocalizationService.cs  SettingsService.cs
MirageClient.WPF/ViewModels/: MainViewModel.cs
cmd/miragec/: appmode_other.go  appmode_windows.go  main.go  main_other.go  main_windows.go  rsrc.syso
cmd/miraged/: main.go
desktop/: README.md  package-lock.json  package.json
desktop/app/: index.html
desktop/scripts/: prepare-sidecar.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
internal/auth/: auth.go
internal/certutil/: certutil.go
internal/client/: client.go  http_proxy.go  socks5.go
internal/config/: client_certpin_test.go  config.go
internal/daemon/: daemon.go  stats.go
internal/dashboard/: compat.go  dashboard.go  dashboard_test.go  index.html  proxy.go
internal/mux/: mux.go  mux_test.go
internal/protocol/: derive.go
internal/reality/: auth.go  cert.go  doc.go
internal/record/: conn.go  conn_test.go
internal/replayconn/: conn.go  conn_test.go
internal/server/: runtime.go  server.go
internal/sysproxy/: diag_other.go  diag_windows.go  options.go  sysproxy_api.go  sysproxy_other.go  (+1 more)
(+7 files in other folders)
