[package]
name = "mirage-desktop"
version = "0.1.0"
description = "MIRAGE desktop shell"
authors = ["MIRAGE"]
edition = "2021"

[package.metadata.tauri-winres]
ProductName = "MIRAGE"
FileDescription = "MIRAGE desktop shell"
OriginalFilename = "mirage-desktop.exe"
LegalCopyright = "Copyright MIRAGE"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
